--- a/model/build.gradle
+++ b/model/build.gradle
@@ -11,4 +11,5 @@ dependencies {
 	//compile("ch.qos.logback:logback-classic:1.1.2")
 	compile("javax.ws.rs:javax.ws.rs-api:2.0")
 	compile("com.thoughtworks.xstream:xstream:1.4.7")
+	compile("com.google.code.gson:gson:2.4")
 }
