--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,19 @@
 profile=jrevolt
 
+#
+# build / release information
+#
 release=false
 basetag=0.1.0.BUILD
+buildNumber=
+buildTimestamp=
+buildTimestampFormat=yyyy-MM-dd'T'HH:mm:ss.SSSZ
 
+# compiler
+sourceCompatibility = 1.8
+#
+# repository config
+#
 repository=http://repo.jrevolt.io/content/groups/public
 snapshots=
 releases=
@@ -12,8 +23,9 @@ deploymentPassword=
 #
 # versions
 #
-springVersion=4.2.0.RELEASE
-springBootVersion=1.3.0.RC1
+jrevoltLauncherVersion=0.2.1
+springVersion=4.2.5.RELEASE
+springBootVersion=1.3.3.RELEASE
 jerseyVersion=2.3.1
 activemqVersion=5.11.1
 jettyVersion=9.2.9.v20150224
@@ -26,6 +38,7 @@ cloudstackVersion=4.6.0
 jaxrsVersion=2.0.1
 
 
+# tools
 git=git
 
 # jar signing
