--- a/gradle.properties
+++ b/gradle.properties
@@ -15,6 +15,8 @@ sourceCompatibility = 1.8
 # repository config
 #
 repository=http://repo.jrevolt.io/content/groups/public
+repositoryUserName=
+repositoryPassword=
 snapshots=
 releases=
 deploymentUserName=
