--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-profile=jrevolt
+profile=oss
 
 #
 # build / release information
@@ -25,9 +25,9 @@ deploymentPassword=
 #
 # versions
 #
-jrevoltLauncherVersion=0.2.1
-springVersion=4.2.5.RELEASE
-springBootVersion=1.3.3.RELEASE
+jrevoltLauncherVersion=config-SNAPSHOT
+springVersion=4.3.6.RELEASE
+springBootVersion=1.5.1.RELEASE
 jerseyVersion=2.3.1
 activemqVersion=5.11.1
 jettyVersion=9.2.9.v20150224
@@ -48,5 +48,4 @@ keyStoreFile=.keystore
 keyStorePassword=changeit
 keyAlias=teamcity@build.dcom.sk
 keyPassword=changeit
-
 
