--- a/zabbix/build.gradle
+++ b/zabbix/build.gradle
@@ -1,4 +1,6 @@
-
+ext{
+	mainClass="io.jrevolt.sysmon.zabbix.ZabbixMain"
+}
 dependencies {
 	compile project(":io.jrevolt.sysmon.common")
 	compile project(":io.jrevolt.sysmon.model")
@@ -7,7 +9,7 @@ dependencies {
 	compile("org.springframework.boot:spring-boot-starter:${springBootVersion}")
 //	compile("org.springframework:spring-web:${springVersion}")
 
-	compile("com.zabbix4j:com.zabbix4j:${zabbix4jVersion}") {
+	compile("io.jrevolt.zabbix:com.zabbix4j:${zabbix4jVersion}") {
 		exclude group: 'ch.qos.logback'
 		changing = true
 	}
@@ -31,7 +33,7 @@ dependencies {
 
 //	compile("com.fasterxml.jackson.jaxrs:jackson-jaxrs-providers:2.4.3")
 
-	compile("io.jrevolt.launcher:io.jrevolt.launcher:0.1.0.RELEASE")
+	compile("io.jrevolt.launcher:io.jrevolt.launcher:${jrevoltLauncherVersion}")
 
 	compile("com.google.code.gson:gson:2.4")
 
