--- a/agent/build.gradle
+++ b/agent/build.gradle
@@ -8,7 +8,7 @@ dependencies {
 	compile project(":io.jrevolt.sysmon.common")
 	compile project(":io.jrevolt.sysmon.jms")
 
-	compile("com.microsoft.sqlserver:sqljdbc4:4.0")
+	compile("com.microsoft.sqlserver:mssql-jdbc:6.1.0.jre8")
 	compile("mysql:mysql-connector-java:5.1.34")
 
 //	runtime("org.eclipse.jetty.aggregate:jetty-all:${jettyVersion}")
