WIP: #1 - initial UI, cluster composition report

--- a/model/build.gradle
+++ b/model/build.gradle
@@ -15,4 +15,6 @@ dependencies {
 	compile("com.thoughtworks.xstream:xstream:1.4.7")
 	compile("com.google.code.gson:gson:2.4")
 	compile("javax.mail:mail:1.5.0-b01")
+	
+	runtime("org.glassfish.jersey.core:jersey-client:${jerseyVersion}")
 }
